Fix calendar flickering issue, fix bug when using searchbar in nav on search page, where it wouldn't update map, now added componentWillUpdate for spot_search, instead of all in constructor

--- a/app/assets/stylesheets/base/app.scss
+++ b/app/assets/stylesheets/base/app.scss
@@ -7,6 +7,7 @@
 
 .welcome-splash {
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
+  text-align: center;
 }
 
 .welcome-where-to {
